--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="card-media">
             <img src="./assets/focus/Focus3.jpg" alt="Condition-based maintenance" loading="lazy" decoding="async">
           </div>
-          <h3>PdM & Condition-Based Maintenance</h3>
+          <h3>PdM & CBM</h3>
           <p>Monitoring, diagnostics, RUL estimation, and workscoping that reduce disruptions and waste.</p>
         </article>
         
