--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <ul>
             <li>Provision of technical expertise in the area of New and Emerging technologies.</li>
             <li>The Rulemaking Committee (RMT).0742 oversees the regulatory framework for AI-based applications in aviation.</li>
-            <a href=https://www.easa.europa.eu/en/document-library/terms-of-reference-and-rulemaking-group-compositions/tor-rmt0742" target="_blank" rel="noopener">EASA RMT.0742</a>
+            <a href=https://www.easa.europa.eu/en/document-library/terms-of-reference-and-rulemaking-group-compositions/tor-rmt0742 target="_blank" rel="noopener">EASA RMT.0742</a>
           </ul>
         </div>        
         <div class="item">
