--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <p>
         My professional interests lie at the interface of technology, aviation, strategy, and sustainability. I have a broad technical, managerial, and research experience, having worked for airlines, academic institutes, and aerospace manufacturers. I have dealt with the technical and strategic problematics of the design, simulation, operation, and maintenance of aircraft systems and simulation of aviation processes, having led numerous projects and research initiatives. I serve on the Rulemaking Committee on Trustworthy AI (RMT.0742) for the European Union Aviation Safety Agency (EASA) and I lead the Working Group on Diagnostics and Prognostics of the Independent Data Consortium for Aviation (IDCA), next to several other appointments on Technical Advisory Boards and international Working Groups.
       </p>
-        <li><b>Focus: Simulation & Digital Twins, Diagnostics & Prognostics, Autonomy, Trustworthy AI for Safety-critical Systems.</b></li>
-        <li><b>Current roles: Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Researcher, ex-Associate Professor (AUAS).</b></li>
+<!--        <li><b>Focus: Simulation & Digital Twins, Diagnostics & Prognostics, Autonomy, Trustworthy AI for Safety-critical Systems.</b></li>
+        <li><b>Current roles: Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Researcher, ex-Associate Professor (AUAS).</b></li> -->
     </section>
     
 <!--    <section id="projects" class="section">
