--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <div class="card-media">
             <img src="./assets/focus/Focus1.jpg" alt="Digital twins and simulation" loading="lazy" decoding="async">
           </div>
-          <h3>Digital Twins & Simulation</h3>
-          <p>From asset models to airline/airport ops simulation for strategy and decision support.</p>
+          <h3>Simulation & Digital Twins</h3>
+          <p>Airline Ops simulation for decision support, Computational Aerothermodynamics, and more.</p>
         </article>
 
         <article class="card">
@@ -97,7 +97,7 @@
             <img src="./assets/focus/Focus2.jpg" alt="Trustworthy AI" loading="lazy" decoding="async">
           </div>
           <h3>Trustworthy AI</h3>
-          <p>Explainability, V&V, and governance for safe, compliant deployment in aviation.</p>
+          <p>Explainability, V&V, and Data Management for safe, certifiable applications in aviation.</p>
         </article>
 
         <article class="card">
