--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16">
   <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
   <link rel="manifest" href="site.webmanifest"> <!-- optional -->
+  <link rel="stylesheet" href="./media/media-sections.css">
   <meta name="theme-color" content="#111111">
 </head>
 <body>
@@ -111,10 +112,23 @@
       </div>
     </section>
 
-    <section id="highlights" class="section">
+   <!-- <section id="highlights" class="section">
       <h2>Highlights</h2>
       <div id="highlights-grid" class="highlights-grid" aria-live="polite"></div>
+    </section> -->
+
+    <!-- News (LinkedIn) -->
+    <section id="news" class="section">
+      <h2>News</h2>
+      <div id="news-grid" class="media-grid" aria-live="polite"></div>
     </section>
+
+<!-- Videos (YouTube) -->
+    <section id="videos" class="section">
+      <h2>Videos</h2>
+      <div id="videos-grid" class="media-grid" aria-live="polite"></div>
+    </section>
+
     
     <section id="experience" class="section">
       <h2>Current Professional Appointments</h2>
@@ -302,5 +316,6 @@
 
   <script src="./script.js"></script>
   <script src="./highlights/highlights.js"></script>
+  <script src="./media/media-sections.js"></script>
 </body>
 </html>
