--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
       <ul class="nav-list">
         <li><a href="#mission">Mission</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#programmes">Research</a></li>
-        <li><a href="#publications">Publications</a></li>
+        <li><a href="#education">Research</a></li>
         <li><a href="#talks">Talks</a></li>
-        <li><a href="#articles">Articles</a></li>
+        <li><a href="#articles">Media</a></li>
         <li><a href="#about">About me</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><button id="themeBtn" class="theme-btn" onclick="toggleTheme()" aria-label="Toggle theme">🌓</button></li>
