--- a/index.html
+++ b/index.html
@@ -166,11 +166,43 @@
       </ul>
 
   <!-- NEW: the whole tile becomes clickable -->
-  <a class="stretched-link"
-     href="https://techdata.klm.com/en/our-work/blue-labs/"
-     aria-label="KLM Royal Dutch Airlines — Senior Lead, Technical Innovation & Emerging Technologies"></a>
-</div>
+      <a class="stretched-link"
+         href="https://techdata.klm.com/en/our-work/blue-labs/"
+         aria-label="KLM Royal Dutch Airlines — Senior Lead, Technical Innovation & Emerging Technologies"></a>
+    </div>
 
+    <div class="item appt">
+      <h3>Amsterdam University of Applied Sciences</h3>
+      <h3>Senior Research Associate; ex-Associate Professor &amp; Lab Lead</h3>
+      <h3><span class="muted">(06/2021–present, Amsterdam)</span></h3>
+      <ul>
+        <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
+        <li>Co-developed Bright Sky (R&amp;D Mobility Sectors Scheme) and contribute to faculty strategy.</li>
+        <a href="https://research.hva.nl/en/persons/asteris-apostolidis" target="_blank" rel="noopener">Academic Research Profile (PURE)</a>
+      </ul>
+
+  <!-- makes the whole tile clickable -->
+      <a class="stretched-link"
+         href="https://research.hva.nl/en/persons/asteris-apostolidis"
+         aria-label="Amsterdam University of Applied Sciences — Senior Research Associate; ex-Associate Professor & Lab Lead"></a>
+    </div>
+
+    <div class="item appt">
+      <h3>EASA — European Union Aviation Safety Agency</h3>
+      <h3>Independent Expert in New &amp; Emerging Technologies; Rulemaking Committee Member</h3>
+      <h3><span class="muted">(09/2024–present, Cologne)</span></h3>
+      <ul>
+        <li>Provision of technical expertise in the area of new and emerging technologies.</li>
+        <li>Rulemaking Task RMT.0742 oversees the regulatory framework for AI-based applications in aviation.</li>
+        <a href="https://www.easa.europa.eu/en/document-library/terms-of-reference-and-rulemaking-group-compositions/tor-rmt0742" target="_blank" rel="noopener">EASA RMT.0742</a>
+      </ul>
+
+  <!-- makes the whole tile clickable -->
+      <a class="stretched-link"
+         href="https://www.easa.europa.eu/en/document-library/terms-of-reference-and-rulemaking-group-compositions/tor-rmt0742"
+         aria-label="EASA — Independent Expert in New & Emerging Technologies; Rulemaking Committee Member"></a>
+    </div>
+        
 
         
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full employment list on my CV →</a></p>
