--- a/index.html
+++ b/index.html
@@ -158,11 +158,10 @@
     <div class="item appt">
       <h3>KLM Royal Dutch Airlines</h3>
       <h3>Senior Lead, Technical Innovation &amp; Emerging Technologies</h3>
-      <h3><span class="muted">(05/2023–present, Amsterdam)</span></h3>
+      <h3><span class="muted">(05/2023–present, Amsterdam, the Netherlands)</span></h3>
       <ul>
         <li>Lead the Fleet Lab and Emerging Technologies Lab within BlueLabs.</li>
         <li>Focus on simulations &amp; digital twins, data exchange, AI for airline processes, autonomous ground/airport ops.</li>
-        <a href="https://techdata.klm.com/en/our-work/blue-labs/" target="_blank" rel="noopener">KLM BlueLabs</a>
       </ul>
 
   <!-- NEW: the whole tile becomes clickable -->
@@ -174,11 +173,10 @@
     <div class="item appt">
       <h3>Amsterdam University of Applied Sciences</h3>
       <h3>Senior Research Associate; ex-Associate Professor &amp; Lab Lead</h3>
-      <h3><span class="muted">(06/2021–present, Amsterdam)</span></h3>
+      <h3><span class="muted">(06/2021–present, Amsterdam, the Netherlands)</span></h3>
       <ul>
         <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
         <li>Co-developed Bright Sky (R&amp;D Mobility Sectors Scheme) and contribute to faculty strategy.</li>
-        <a href="https://research.hva.nl/en/persons/asteris-apostolidis" target="_blank" rel="noopener">Academic Research Profile (PURE)</a>
       </ul>
 
   <!-- makes the whole tile clickable -->
@@ -190,11 +188,10 @@
     <div class="item appt">
       <h3>EASA — European Union Aviation Safety Agency</h3>
       <h3>Independent Expert in New &amp; Emerging Technologies; Rulemaking Committee Member</h3>
-      <h3><span class="muted">(09/2024–present, Cologne)</span></h3>
+      <h3><span class="muted">(09/2024–present, Cologne, Germany)</span></h3>
       <ul>
         <li>Provision of technical expertise in the area of new and emerging technologies.</li>
         <li>Rulemaking Task RMT.0742 oversees the regulatory framework for AI-based applications in aviation.</li>
-        <a href="https://www.easa.europa.eu/en/document-library/terms-of-reference-and-rulemaking-group-compositions/tor-rmt0742" target="_blank" rel="noopener">EASA RMT.0742</a>
       </ul>
 
   <!-- makes the whole tile clickable -->
