--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="#articles">Media</a></li>
         <li><a href="#about">About me</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><button id="themeBtn" class="theme-btn" onclick="toggleTheme()" aria-label="Toggle theme">🌓</button></li>
+<!--        <li><button id="themeBtn" class="theme-btn" onclick="toggleTheme()" aria-label="Toggle theme">🌓</button></li> -->
       </ul>
     </nav>
   </header>
