--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="./assets/focus/Focus1.jpg" alt="Digital twins and simulation" loading="lazy" decoding="async">
           </div>
           <h3>Simulation & Digital Twins</h3>
-          <p>Airline Ops simulation for decision support, Computational Aerothermodynamics, and more.</p>
+          <p>Simulation of airline operations for decision support, Computational engineering methods.</p>
         </article>
 
         <article class="card">
@@ -96,15 +96,15 @@
             <img src="./assets/focus/Focus2.jpg" alt="Trustworthy AI" loading="lazy" decoding="async">
           </div>
           <h3>Trustworthy AI</h3>
-          <p>Explainability, V&V, and Data Management for safe, certifiable applications in aviation.</p>
+          <p>Explainability, V&V, and Data Management for safe and certifiable applications in aviation.</p>
         </article>
 
         <article class="card">
           <div class="card-media">
             <img src="./assets/focus/Focus3.jpg" alt="Condition-based maintenance" loading="lazy" decoding="async">
           </div>
-          <h3>PdM & CBM</h3>
-          <p>Monitoring, diagnostics, RUL estimation, and workscoping that reduce disruptions and waste.</p>
+          <h3>Predictive Maintenance</h3>
+          <p>Diagnostics & Prognostics, Workscoping, RUL estimation for reduction of disruptions and waste.</p>
         </article>
         
       </div>
@@ -160,8 +160,8 @@
       <h3>Senior Lead, Technical Innovation &amp; Emerging Technologies</h3>
       <h3><span class="muted">(05/2023–present, Amsterdam, the Netherlands)</span></h3>
       <ul>
-        <li>Lead the Fleet Lab and Emerging Technologies Lab within BlueLabs.</li>
-        <li>Focus on simulations &amp; digital twins, data exchange, AI for airline processes, autonomous ground/airport ops.</li>
+        <li>I lead the Fleet and Emerging Technologies Labs within KLM, exploring the applicability of future technologies.</li>
+        <li>I focus on Simulation &amp; Digital Twins, Optimisation, Data Exchange, Trustworthy AI, and Autonomy for Operations.</li>
       </ul>
 
   <!-- NEW: the whole tile becomes clickable -->
@@ -175,8 +175,8 @@
       <h3>Senior Research Associate; ex-Associate Professor &amp; Lab Lead</h3>
       <h3><span class="muted">(06/2021–present, Amsterdam, the Netherlands)</span></h3>
       <ul>
-        <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
-        <li>Co-developed Bright Sky (R&amp;D Mobility Sectors Scheme) and contribute to faculty strategy.</li>
+        <li>I lead industrial research with parters like Air France-KLM, the Royal Dutch Airforce, MTU Aero Engines.</li>
+        <li>I co-developed Bright Sky (RVO R&amp;D Mobility Fund) and contributed to faculty strategy.</li>
       </ul>
 
   <!-- makes the whole tile clickable -->
@@ -190,8 +190,8 @@
       <h3>Independent Expert in New &amp; Emerging Technologies; Rulemaking Committee Member</h3>
       <h3><span class="muted">(09/2024–present, Cologne, Germany)</span></h3>
       <ul>
-        <li>Provision of technical expertise in the area of new and emerging technologies.</li>
-        <li>Rulemaking Task RMT.0742 oversees the regulatory framework for AI-based applications in aviation.</li>
+        <li>I provide technical expertise in several areas around new and emerging technologies in aviation.</li>
+        <li>I participate in the Rulemaking Task RMT.0742, overseeing the regulatory framework for AI in aviation.</li>
       </ul>
 
   <!-- makes the whole tile clickable -->
