--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
          alt="Portrait of Dr Asteris Apostolidis">
     <div class="about-text">
       <h2>About me</h2>
-      <p>I was born and raised in Thessaloniki, Greece, and over the last sixteen years I’ve lived in the UK, Belgium, France, and the Netherlands. Beyond aviation, I’m a lifelong photographer—darkroom to digital—drawn to landscapes, aircraft, street scenes, and the places I travel. Music is a constant companion; I’ve been collecting records and other physical formats for more than three decades. I now live in Amsterdam, where you’ll often find me building LEGO sets with my three children or exploring science and space-related exhibitions together.
+      <p>I was born and raised in Thessaloniki, Greece, and over the last sixteen years I’ve lived in the UK, Belgium, France, and the Netherlands. Beyond aviation, I’m a lifelong photographer—darkroom to digital—drawn to landscapes, street scenes, aircraft, and the places I travel. Music is a constant companion; I’ve been collecting records and other physical formats for more than three decades. I now live in Amsterdam, where you’ll often find me building LEGO sets with my three children or exploring space-related exhibitions together.
       </p>
     </div>
   </div>
