--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dr Asteris Apostolidis — Aviation, AI & Simulation</title>
-  <meta name="description" content="Dr Asteris Apostolidis — innovation & research leader in aviation. AI, simulation, and data-driven maintenance." />
+  <title>Dr Asteris Apostolidis — Aviation, Aerospace, Technology.</title>
+  <meta name="description" content="Dr Asteris Apostolidis — Innovation leader in tech for aviation and aerospace." />
   <meta name="robots" content="index,follow" />
   <meta property="og:title" content="Dr Asteris Apostolidis — Aviation, AI & Simulation" />
   <meta property="og:description" content="Strategy and systems for predictive maintenance, trustworthy AI, and digital twins." />
