--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
     <section id="awards" class="section">
       <h2>Selected Awards & Distinctions</h2>
       <ul class="list">
-        <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce plc, and the German Aerospace Center (DLR) programmes.</li>
-        <li>Best thesis supervision award (NLF - National Aerospace Funds), 2022.</li>
+        <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce plc and the German Aerospace Center (DLR).</li>
+        <li>Supervision for the Best Thesis award — NLF (National Aerospace Funds), 2022.</li>
         <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
       </ul>
