--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <h2>Selected Invited Talks</h2>
       <ul class="list">
         <li>Keynote: “Revolutionising aerospace with trustworthy AI”, 11th China Aviation New Technology Forum (2025), Guangzhou, China.</li>
-        <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, (2024), USA.</li>
+        <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology (2024), Atlanta, USA.</li>
         <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), Amsterdam, the Netherlands.</li>
         <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Västerås, Sweden.</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
@@ -284,8 +284,8 @@
       <h2>Selected Awards & Distinctions</h2>
       <ul class="list">
         <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce plc and the German Aerospace Center (DLR).</li>
-        <li>Supervision for the Best Thesis award — NLF (National Aerospace Funds), 2022.</li>
-        <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
+        <li>Supervision for the Best Thesis award — NLF National Aerospace Funds, (2022).</li>
+        <li>Outstanding Contribution in Reviewing — Elsevier, (2019).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
       </ul>
     </section>
