--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
     <section id="education" class="section">
       <h2>Education</h2>
       <ul class="list">
-        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li>
-        <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University.</li>
-        <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki.</li>
+        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University (2014).</li>
+        <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University (2010).</li>
+        <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki (2009).</li>
         <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository →</a></p>
       </ul>
     </section>
@@ -250,9 +250,9 @@
     <section id="programmes" class="section">
       <h2>Industrial & Academic Research Programmes</h2>
       <ul class="list">
-        <li>Bright Sky — Innovations in Predictive Maintenance, MRO, Security, Training (RVO R&D Mobility Fund).</li>
-        <li>CIMPLO — Cross-industry Predictive Maintenance & Dynamic scheduling platform (NWO Smart Industry).</li>
-        <li>Data Mining in MRO — Data Analytics & Predictive Maintenance in aviation MRO (NWO / SIA RAAK MKB).</li>
+        <li>Bright Sky — Innovations in Predictive Maintenance, MRO, Security, Training (RVO R&D Mobility Fund, 2021-2025).</li>
+        <li>CIMPLO — Cross-industry Predictive Maintenance & Dynamic scheduling platform (NWO Smart Industry, 2017-2022).</li>
+        <li>Data Mining in MRO — Data Analytics & Predictive Maintenance in aviation MRO (NWO / SIA RAAK MKB, 2017-2020).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full details in my CV →</a></p>
       </ul>
     </section>
@@ -271,11 +271,11 @@
     <section id="talks" class="section">
       <h2>Selected Invited Talks</h2>
       <ul class="list">
-        <li>Keynote: “Revolutionising aerospace with trustworthy AI”, 11th China Aviation New Technology Forum (2025), Guangzhou, China.</li>
-        <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology (2024), Atlanta, USA.</li>
-        <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), Amsterdam, the Netherlands.</li>
-        <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Västerås, Sweden.</li>
-        <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
+        <li>Keynote: “Revolutionising aerospace with trustworthy AI”, 11th China Aviation New Technology Forum, Guangzhou, China (2025).</li>
+        <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, USA (2024).</li>
+        <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival, Amsterdam, the Netherlands (2024).</li>
+        <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University, Västerås, Sweden (2023).</li>
+        <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute, UK (2022).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
       </ul>
     </section>
