--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <ul class="list">
         <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University (2014).</li>
         <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University (2010).</li>
-        <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki (2009).</li>
+        <li>Dipl. Eng., Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki (2009).</li>
         <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository →</a></p>
       </ul>
     </section>
@@ -252,7 +252,7 @@
       <ul class="list">
         <li>Bright Sky — Innovations in Predictive Maintenance, MRO, Security, Training (RVO R&D Mobility Fund, 2021-2025).</li>
         <li>CIMPLO — Cross-industry Predictive Maintenance & Dynamic scheduling platform (NWO Smart Industry, 2017-2022).</li>
-        <li>Data Mining in MRO — Data Analytics & Predictive Maintenance in aviation MRO (NWO / SIA RAAK MKB, 2017-2020).</li>
+        <li>Data Mining in MRO — Data Analytics & Predictive Maintenance in aviation MRO (NWO / SIA RAAK MKB, 2016-2019).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full details in my CV →</a></p>
       </ul>
     </section>
@@ -273,7 +273,7 @@
       <ul class="list">
         <li>Keynote: “Revolutionising aerospace with trustworthy AI”, 11th China Aviation New Technology Forum, Guangzhou, China (2025).</li>
         <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, USA (2024).</li>
-        <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival, Amsterdam, the Netherlands (2024).</li>
+        <li>Panel: “Data synergy: Unlocking aviation’s potential”, World Aviation Festival, Amsterdam, the Netherlands (2024).</li>
         <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University, Västerås, Sweden (2023).</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute, UK (2022).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
@@ -284,8 +284,8 @@
       <h2>Selected Awards & Distinctions</h2>
       <ul class="list">
         <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce plc and the German Aerospace Center (DLR).</li>
-        <li>Supervision for the Best Thesis award — NLF National Aerospace Funds, (2022).</li>
-        <li>Outstanding Contribution in Reviewing — Elsevier, (2019).</li>
+        <li>Supervision for the Best Thesis award — NLF National Aerospace Funds (2022).</li>
+        <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
       </ul>
     </section>
