--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <section id="education" class="section">
       <h2>Education</h2>
       <ul class="list">
-        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University (2014).</li>
+        <li>PhD, Turbine Cooling and Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University (2014).</li>
         <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University (2010).</li>
         <li>Dipl. Eng., Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki (2009).</li>
         <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository →</a></p>
