--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <h3>Senior Research Associate; ex-Associate Professor &amp; Lab Lead</h3>
       <h3><span class="muted">(06/2021–present, Amsterdam, the Netherlands)</span></h3>
       <ul>
-        <li>I lead industrial research with parters like Air France-KLM, the Royal Dutch Airforce, MTU Aero Engines.</li>
+        <li>I lead industrial research with partners like Air France-KLM, the Royal Dutch Airforce, MTU Aero Engines.</li>
         <li>I co-developed Bright Sky (RVO R&amp;D Mobility Fund) and contributed to faculty strategy.</li>
       </ul>
 
@@ -335,7 +335,7 @@
          alt="Portrait of Dr Asteris Apostolidis">
     <div class="about-text">
       <h2>About me</h2>
-      <p>I was born and raised in Thessaloniki, Greece, and over the last sixteen years I’ve lived in the UK, Belgium, France, and the Netherlands. Beyond aviation, I’m a lifelong photographer—darkroom to digital—drawn to landscapes, street scenes, aircraft, and the places I travel. Music is a constant companion; I’ve been collecting records and other physical formats for more than three decades. I now live in Amsterdam, where you’ll often find me building LEGO sets with my three children or exploring science exhibitions together.
+      <p>I was born and raised in Thessaloniki, Greece, and over the last sixteen years I’ve lived in the UK, Belgium, France, and the Netherlands. Beyond aviation, I’m a lifelong photographer -darkroom to digital- drawn to landscapes, street scenes, aircraft, and the places I travel. Music is a constant companion; I’ve been collecting records and other physical formats for more than three decades. I now live in Amsterdam, where you’ll often find me building LEGO sets with my three children or exploring science exhibitions together.
       </p>
     </div>
   </div>
