--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
     <section id="talks" class="section">
       <h2>Selected Invited Talks</h2>
       <ul class="list">
+        <li>Invited Talk: “Innovation Beyond AI: What is Next”, EUROCONTROL, Paris, France (2025).</li>
         <li>Keynote: “Revolutionising aerospace with trustworthy AI”, 11th China Aviation New Technology Forum, Guangzhou, China (2025).</li>
         <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, USA (2024).</li>
         <li>Panel: “Data synergy: Unlocking aviation’s potential”, World Aviation Festival, Amsterdam, the Netherlands (2024).</li>
-        <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University, Västerås, Sweden (2023).</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute, UK (2022).</li>
         <p><a href="./cv/CV_Asteris_Apostolidis_Oct25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
       </ul>
