--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dr Asteris Apostolidis — Aviation, AI & Simulation</title>
-  <meta name="description" content="Dr Asteris Apostolidis — innovation & research leader in aviation. AI, simulation, and data-driven maintenance." />
+  <title>Dr Asteris Apostolidis — Aviation, Aerospace, Technology.</title>
+  <meta name="description" content="Dr Asteris Apostolidis — innovation, tranformation & research leader in aviation." />
   <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="Dr Asteris Apostolidis — Aviation, AI & Simulation" />
+  <meta property="og:title" content="Dr Asteris Apostolidis — Aviation, Aerospace, Technology." />
   <meta property="og:description" content="Strategy and systems for predictive maintenance, trustworthy AI, and digital twins." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://asteris.nl" />
+  <meta property="og:url" content="https://whoisasteris.com" />
   <meta property="og:image" content="./assets/headshot.jpg" />
   <link rel="preload" as="image" href="./assets/headshot.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,7 +39,7 @@
       <div class="hero-inner">
         <img class="headshot" src="./assets/headshot.jpg" alt="Portrait of Dr Asteris Apostolidis" />
         <h1>Dr Asteris Apostolidis</h1>
-        <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
+        <p class="kicker">Technology, Strategy, Innovation &amp; Business Transformation • Aviation  &amp; Aerospace</p>
         <div class="cta-row">
           <a class="btn" href="#projects">See focus areas</a>
           <a class="btn ghost" href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">LinkedIn</a>
