--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dr Asteris Apostolidis — Aviation, Aerospace, Technology.</title>
-  <meta name="description" content="Dr Asteris Apostolidis — Innovation leader in tech for aviation and aerospace." />
+  <meta name="description" content="Dr Asteris Apostolidis — Transformation leader in tech for aviation and aerospace." />
   <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="Dr Asteris Apostolidis — Aviation, AI & Simulation" />
+  <meta property="og:title" content="Dr Asteris Apostolidis — Aviation, Aerospace, Technology." />
   <meta property="og:description" content="Strategy and systems for predictive maintenance, trustworthy AI, and digital twins." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://asteris.nl" />
+  <meta property="og:url" content="https://whoisasteris.com" />
   <meta property="og:image" content="./assets/headshot.jpg" />
   <link rel="preload" as="image" href="./assets/headshot.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
