--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="hero-inner">
         <img class="headshot" src="./assets/career-collage.jpg" alt="Portraits of Dr Asteris Apostolidis" />
         <h1>Dr Asteris Apostolidis</h1>
-        <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
+        <p class="kicker">Technology, Strategy, Innovation &amp; Business Transformation • Aviation  &amp; Aerospace</p>
         <div class="cta-row">
           <a class="btn" href="#projects">See focus areas</a>
           <a class="btn ghost" href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">LinkedIn</a>
